[package]
name = "pier-rs"
version = "0.1.0"
authors = ["Alexader <tyxj58@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.13", default-features = false }
anyhow = "1.0"
serde = "1.0.118"
serde_json = "1.0"